bug 799900 - [HiDPI] account for device-pixel scaling for IME window position. r=smichaud